samples/_failures_safe/1761517505_09636a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_807a56f4.c: In function ‘main’:
./samples/SAFE/__tmp_807a56f4.c:164:5: error: expected expression at end of input
  164 |     if (len >
      |     ^~
./samples/SAFE/__tmp_807a56f4.c:164:5: error: expected declaration or statement at end of input
